--- a/src/view/less/style.less
+++ b/src/view/less/style.less
@@ -12,12 +12,24 @@
 
 .navigationBar {
     z-index: 1000;
-    display: flex;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
     flex-wrap: nowrap;
 }
 
 .navigationBar {
-    flex: 0;
+    -webkit-flex: 0 0 auto;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
+    * {
+        -webkit-flex: 0 0 auto;
+        -ms-flex: 0 0 auto;
+        flex: 0 0 auto;
+    }
 }
 
 .navigationButtons {
@@ -26,7 +38,9 @@
 }
 
 .navigationRemaining {
-    flex: 1;
+    -webkit-flex: 1 0 auto;
+    -ms-flex: 1 0 auto;
+    flex: 1 0 auto;
 
     display: -webkit-box;
     display: -webkit-flex;
@@ -43,6 +57,8 @@
 }
 
 .navigationRemaining * {
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
     flex: 0 1 auto;
 }
 
